@@ -1,6 +1,6 @@
 {
   "name": "@massimo-cassandro/m-utilities",
-  "version": "5.2.4",
+  "version": "5.3.0",
   "description": "My collection of front-end development snippets & utilities",
   "scripts": {
     "upd patch vers + npm publish": "node ./node_modules/@massimo-cassandro/dev-utils/src/update-version.mjs --patch-only && npm publish",
